# SimpleUtils

./: CMakeLists.txt  README.md
cmake/: googletest-download.cmake
documents/serialize/: architecture.plantuml
example/: CMakeLists.txt  CmakeLists.txt
example/channel/: CMakeLists.txt  pub.cpp  sub.cpp
example/functionMap/: CMakeLists.txt  CmakeLists.txt  example.cpp  funcionMap.cpp  main.cpp
example/serialize/: CMakeLists.txt  CmakeLists.txt  basicType.cpp  containerType.cpp  example.cpp
example/sigslot/: CMakeLists.txt
example/threadPool/: CMakeLists.txt  threadPool.cpp
example/timer/: CMakeLists.txt  timer.cpp
include/: sUtils.hpp
include/sUtils/channel/: buffer.hpp  channel.hpp  lock.hpp  session.hpp  shared_mem_session.hpp
include/sUtils/fsm/: fsm.hpp
include/sUtils/funcMap/: FunctionMap.hpp  Helper.hpp  Stream.hpp
include/sUtils/funcMap/helper/: FuncTraits.hpp  Helper copy.hpp  Helper.hpp  Helper_backup.hpp  ParamTraits.hpp  TypeTraits.hpp
include/sUtils/funcMap_1/: Stream.hpp
include/sUtils/funcMap_1/helper/: FuncTraits.hpp  TypeTraits.hpp
include/sUtils/pipe/: pipe.hpp  pipes.hpp
include/sUtils/runLoop/: RunLoop.hpp  Task.hpp
include/sUtils/serialize/: Buffer.hpp  Serialize.hpp  Serializer.hpp
include/sUtils/serialize/buffer/: Buffer.hpp
include/sUtils/serialize/type/: ArraySerialize.hpp  CharSerialize.hpp  DoubleSerialize.hpp  FloatSerialize.hpp  IntSerialize.hpp  MapSerialize.hpp  SetSerialize.hpp  StringSerialize.hpp  Type.hpp  TypeSerializer.hpp  UintSerialize.hpp  VectorSerialize.hpp
include/sUtils/serialize/type/helper/: Buffer.hpp  Common.hpp  TypeTrait.hpp
include/sUtils/sigslot/: SigSlot.hpp
include/sUtils/threadPool/: ThreadPool.hpp
include/sUtils/timer/: Time.hpp  Timer.hpp
tests/: CMakeLists.txt
tests/functionMap/: CMakeLists.txt
tests/serialize/: CMakeLists.txt  serialize_basic_type_test.cpp  serialize_container_type_test.cpp  serialize_type_test.cpp
